0.7.3
* A new (native Go) EC_Verify speedup, based on sipa's secp256k1 code (client/speedup/mygonat.go)

0.7.2
* A new (DLL based) EC_Verify speedup for Windows (client/speedup/sipadll.go)

0.7.1
* Wallet's random numbers (used for ECDSA_Sign) don't rely on security of "crypt/random" package

0.7.0
* A major rewrite around shared memory access, in the network client

0.6.7
* Added some protection against racing conditions
* Do not switch off GC while verifying a block
* Added UI command "defrag" that purges and recompresses the block database
* Added snappy compression for the block database (its faster than gzip)

0.6.6
* Added support for wallet.cfg to specify some default values
* Wallet's "-t2" and "-t3" command line swiches replaced with "-type=X"
* Labels returned in balance.xml are HTML escaped

0.6.5
* Fixed a critical bug in script parsing (0x00 at top of the stack was not considered as "if true")
* Fetch seed peers in a background and save peers DB to disk before quiting
* Ctrl+C works now also during rescan and allows to continue later from where stopped.

0.6.4
* Support for deterministic wallet Type-3 (keeps other keys safe, if one got compromised)
* The wallet can export private key now, in the satoshi's base58 format (-dump switch)

0.6.3
* Show balance of per address at the Wallets tab

0.6.2
* Added support for WebUI switchable wallets

0.6.1
* Improved script_test.go, so it works directly with satoshi's json files

0.6.0
* Added support for verifying (rejecting) P2SH transactions
* Added handling of OP_1ADD script opcopde and fixed some other opcodes
* UI cmd "unspent" returns outputs sorted by block height

0.5.8
* Added some more satoshi-script-evaluation compatiblity patches (and unit tests)

0.5.7
* By default, don't download same block from more than 3 peers simultaneously (CFG.Net.MaxBlockAtOnce)
* Fixed a critical blockchain parsing issue, with SIGHASH_SINGLE sigs (was rejecting valid blocks)

0.5.5